--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   get_it: ^8.0.3
   fluttertoast: ^8.2.12
   dio: ^5.8.0+1
-  pull_to_refresh_flutter3: 2.0.2
+  pull_to_refresh_flutter3: ^2.0.2
 
 
 dev_dependencies:
